# my-claude-code-settings

./: .gitignore  AGENTS.md  README.md  README_CN.md  install.ps1  install.py  install.sh  install_cli.py  install_tui.py  justfile  plugins.md  pyproject.toml
commands/claude/: export.md  import.md
commands/gemini/: export.toml  git-commit.toml  import.toml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/commands/: export.md  git-commit.md  import.md  index.md
docs/guide/: commands.md  creating-skills.md  index.md  installation.md  omo-agents-tutorial.md  plugins.md  prompts.md
docs/skills/: IEEE-writing-skills.md  article-cover.md  claude-expert-skill-creator.md  codex.md  document-writer.md  excalidraw.md  explore.md  frontend-design.md  frontend-engineer.md  gemini-image.md  index.md  latex-paper-en.md  latex-thesis-zh.md  librarian.md  multimodal-looker.md  omo-agents.md  oracle.md  paper-replication.md  research.md  sisyphus.md  spec-interview.md  tech-blog.md  tech-design-doc.md
docs/zh/: index.md
prompts/: CLAUDE.md  TRANSLATE.md
skills/IEEE-writing-skills/: README.md  SKILL.md
skills/codex/: SKILL.md
skills/latex-paper-en/: SKILL.md
skills/latex-thesis-zh/: SKILL.md
skills/paper-replication/: skill.md
skills/research/: SKILL.md
tests/: __init__.py  test_footer_properties.py  test_install_properties.py  test_item_format_properties.py  test_manager_properties.py  test_platform_properties.py  test_selection_properties.py  test_theme_properties.py
tui/: __init__.py  app.py  styles.tcss
(+69 files in other folders)
