[project]
name = "myclaude-skills"
version = "0.1.0"
description = "MyClaude Skills TUI - Terminal User Interface for managing skills and commands"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.47.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.hypothesis]
max_examples = 100
